--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,6 +67,7 @@ $spacing: 0.4em;
     font-size: $font_size * 1.15;
     font-family: "Material Icons";
     font-weight: normal;
+    letter-spacing: -0.125em;
     margin-right: 0.2em;
 }
 
